--- a/template/css/default.css
+++ b/template/css/default.css
@@ -201,7 +201,7 @@
 
 /* colors */
 .bx-def-color-bg-page {
-    background-color:blue;
+    background-color:#f3f4fa;
     background-image:url(../images/bg-page.png);
 }
 .bx-def-color-bg-block {
